// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`binding-mode entries > are pinned (telemetry=false) > per-app 1`] = `
"// Auto-generated by the base44 bundler. Do not edit.

import { currentWorkerRuntimeContext as _b44Context, runWithWorkerEnvironment as _b44Run } from "base44:internal/runtime-context";
import { installStaticEgressFetch, resolveHandler } from "./__base44_deno_shim.mjs";
import "./__base44_fn_0.mjs";

const _b44Orig = console.log;
const _b44S = x => { if (x instanceof Error) return x.stack || x.message; try { return typeof x === 'string' ? x : (JSON.stringify(x) ?? String(x)); } catch (e) { return String(x); } };
const _b44Fmt = (a) => {
  if (typeof a[0] !== 'string' || !a[0].includes('%')) return a.map(_b44S).join(' ');
  let i = 1;
  const s = a[0].replace(/%([sdifoOc])/g, (_, t) => {
    if (i >= a.length) return '%' + t;
    const v = a[i++];
    if (t === 'd' || t === 'i') { try { return String(Math.trunc(+v)); } catch(_) { return _b44S(v); } }
    if (t === 'f') { try { return String(+v); } catch(_) { return _b44S(v); } }
    if (t === 'c') return '';
    return _b44S(v);
  });
  const tail = a.slice(i).map(_b44S).join(' ');
  return tail ? s + ' ' + tail : s;
};
const _b44Ascii = (s) => s.replace(/[\\u007f-\\uffff]/g, (c) => '\\\\u' + c.charCodeAt(0).toString(16).padStart(4, '0'));
const _b44Capture = (c, lvl, msg) => {
  if (!c.invocationLogs) return;
  const cost = _b44Ascii(JSON.stringify(msg)).length + 30;
  if (c.invocationLogs.length >= 40 || c.invocationLogsBytes + cost > 6144) { c.invocationLogsDropped += 1; return; }
  c.invocationLogsBytes += cost;
  c.invocationLogs.push({ level: lvl, message: msg });
};
const _b44Wrap = (lvl, a) => { const _c = _b44Context() ?? {}; const _m = _b44Fmt(a); _b44Capture(_c, lvl, _m); _b44Orig({ _b44_env: _c.env ?? 'preview', ...(_c.fn ? { _b44_function: _c.fn } : {}), level: lvl, message: _m }); };
console.log = (...a) => _b44Wrap('info', a);
console.info = (...a) => _b44Wrap('info', a);
console.warn = (...a) => _b44Wrap('warn', a);
console.error = (...a) => _b44Wrap('error', a);
console.debug = (...a) => _b44Wrap('debug', a);
const _b44ReservedSecrets = new Set(['BASE44_ACTOR_PRIVATE_KEY', 'BASE44_ACTOR_PUBLIC_KEY', 'BASE44_ACTOR_SCRIPT_ID', 'BASE44_PRIVATE_DATA_SOURCES']);
globalThis.Base44 = Object.assign(globalThis.Base44 ?? {}, { waitUntil: (p) => { const _c = _b44Context(); if (_c?.waitUntil) { _c.waitUntil(p); } else { Promise.resolve(p).catch(() => {}); } }, secrets: { get: (n) => { const _k = String(n); if (_b44ReservedSecrets.has(_k)) return undefined; const _v = _b44Context()?.secrets?.[_k]; return typeof _v === 'string' ? _v : undefined; } } });
globalThis.EdgeRuntime = globalThis.EdgeRuntime ?? { waitUntil: (p) => globalThis.Base44.waitUntil(p) };
const _b44CaptureStore = (request) => request.headers.get("X-B44-Capture-Logs") === '1' ? { invocationLogs: [], invocationLogsBytes: 0, invocationLogsDropped: 0 } : {};
const _b44AttachInvocationLogs = (res) => {
  const c = _b44Context();
  if (!c || !c.invocationLogs) return res;
  if (!(res instanceof Response) || res.status === 101 || res.webSocket) return res;
  let existingBytes = 25;
  res.headers.forEach((v, k) => { existingBytes += k.length + v.length + 4; });
  let payload = _b44Ascii(JSON.stringify({ lines: c.invocationLogs, dropped: c.invocationLogsDropped }));
  if (existingBytes + payload.length > 7168) payload = JSON.stringify({ lines: [], dropped: c.invocationLogs.length + c.invocationLogsDropped });
  if (existingBytes + payload.length > 7168) return res;
  let wrapped;
  try { wrapped = new Response(res.body, res); } catch (e) { return res; }
  try { wrapped.headers.set("X-B44-Invocation-Logs", payload); } catch (e) {}
  return wrapped;
};
const _b44CrashResponse = (e) => {
  const c = _b44Context();
  if (!c || !c.invocationLogs) return null;
  const m = String(e instanceof Error ? e.message : e).toLowerCase();
  if (m.includes('cpu time limit') || m.includes('too many subrequests')) return null;
  return _b44AttachInvocationLogs(new Response(JSON.stringify({ error: 'user-exception', detail: 'user worker threw an exception' }), { status: 500, headers: { 'Content-Type': 'application/json' } }));
};
// Static egress reads workerEnv from the active request store. Install it
// before telemetry so telemetry remains the outermost fetch wrapper.
installStaticEgressFetch();


export default {
  async fetch(request, env, ctx) {
    const _b44Env = (request.headers.get('base44-functions-version') ?? '') === 'prod' ? 'prod' : 'preview';
    const functionName = request.headers.get("Base44-Function-Name");
    return _b44Run({ env: _b44Env, fn: functionName ?? '', secrets: env, workerEnv: env, waitUntil: (p) => ctx.waitUntil(p), ..._b44CaptureStore(request) }, async () => {
      // Each early return below logs through the patch first: per-function log
      // queries on per-app scripts keep only stamped lines, so a bare return
      // would leave the failing invocation with no trace in its own logs.
      const pendingHandler = functionName ? resolveHandler(functionName) : undefined;
      if (pendingHandler === undefined) {
        const message = \`No function registered for "\${functionName ?? ""}"\`;
        console.error(message);
        return _b44AttachInvocationLogs(new Response(message, { status: 404 }));
      }
      let handler;
      try {
        handler = await pendingHandler;
      } catch (e) {
        console.error(\`Function "\${functionName}" failed to initialize:\`, e);
        return _b44AttachInvocationLogs(new Response(
          \`Function "\${functionName}" failed to initialize: \${e instanceof Error ? e.message : String(e)}\`,
          { status: 500 },
        ));
      }
      if (handler === null) {
        const message = \`Function "\${functionName}" must export default a request handler or call Deno.serve()\`;
        console.error(message);
        return _b44AttachInvocationLogs(new Response(message, { status: 503 }));
      }
      // Real client IP is in the "cf-connecting-ip" header, not this placeholder.
      const info = {
        remoteAddr: { transport: "tcp", hostname: "0.0.0.0", port: 0 },
      };
      // Cloudflare reports uncaught exceptions as its own log events, outside
      // the console patch and therefore without function attribution. Log the
      // crash through the patch (stamped with _b44_function) before
      // rethrowing; per-function log queries on per-app scripts keep only
      // stamped lines (see log_query.event_matches_function). Known gap:
      // exceptions thrown while a response body streams happen after this
      // frame returns and cannot be stamped — those crash events are
      // dropped from per-function views, and lines logged after the response
      // starts streaming are past the invocation-logs header too.
      try {
        return _b44AttachInvocationLogs(await handler(request, info));
      } catch (e) {
        console.error(e);
        const crash = _b44CrashResponse(e);
        if (crash) return crash;
        throw e;
      }
    });
  },
};
"
`;

exports[`binding-mode entries > are pinned (telemetry=false) > single function 1`] = `
"// Auto-generated by the base44 bundler. Do not edit.

import { currentWorkerRuntimeContext as _b44Context, runWithWorkerEnvironment as _b44Run } from "base44:internal/runtime-context";
import { getRegisteredHandler, installStaticEgressFetch } from "./__base44_deno_shim.mjs";

const _b44Orig = console.log;
const _b44S = x => { if (x instanceof Error) return x.stack || x.message; try { return typeof x === 'string' ? x : (JSON.stringify(x) ?? String(x)); } catch (e) { return String(x); } };
const _b44Fmt = (a) => {
  if (typeof a[0] !== 'string' || !a[0].includes('%')) return a.map(_b44S).join(' ');
  let i = 1;
  const s = a[0].replace(/%([sdifoOc])/g, (_, t) => {
    if (i >= a.length) return '%' + t;
    const v = a[i++];
    if (t === 'd' || t === 'i') { try { return String(Math.trunc(+v)); } catch(_) { return _b44S(v); } }
    if (t === 'f') { try { return String(+v); } catch(_) { return _b44S(v); } }
    if (t === 'c') return '';
    return _b44S(v);
  });
  const tail = a.slice(i).map(_b44S).join(' ');
  return tail ? s + ' ' + tail : s;
};
const _b44Ascii = (s) => s.replace(/[\\u007f-\\uffff]/g, (c) => '\\\\u' + c.charCodeAt(0).toString(16).padStart(4, '0'));
const _b44Capture = (c, lvl, msg) => {
  if (!c.invocationLogs) return;
  const cost = _b44Ascii(JSON.stringify(msg)).length + 30;
  if (c.invocationLogs.length >= 40 || c.invocationLogsBytes + cost > 6144) { c.invocationLogsDropped += 1; return; }
  c.invocationLogsBytes += cost;
  c.invocationLogs.push({ level: lvl, message: msg });
};
const _b44Wrap = (lvl, a) => { const _c = _b44Context() ?? {}; const _m = _b44Fmt(a); _b44Capture(_c, lvl, _m); _b44Orig({ _b44_env: _c.env ?? 'preview', ...(_c.fn ? { _b44_function: _c.fn } : {}), level: lvl, message: _m }); };
console.log = (...a) => _b44Wrap('info', a);
console.info = (...a) => _b44Wrap('info', a);
console.warn = (...a) => _b44Wrap('warn', a);
console.error = (...a) => _b44Wrap('error', a);
console.debug = (...a) => _b44Wrap('debug', a);
const _b44ReservedSecrets = new Set(['BASE44_ACTOR_PRIVATE_KEY', 'BASE44_ACTOR_PUBLIC_KEY', 'BASE44_ACTOR_SCRIPT_ID', 'BASE44_PRIVATE_DATA_SOURCES']);
globalThis.Base44 = Object.assign(globalThis.Base44 ?? {}, { waitUntil: (p) => { const _c = _b44Context(); if (_c?.waitUntil) { _c.waitUntil(p); } else { Promise.resolve(p).catch(() => {}); } }, secrets: { get: (n) => { const _k = String(n); if (_b44ReservedSecrets.has(_k)) return undefined; const _v = _b44Context()?.secrets?.[_k]; return typeof _v === 'string' ? _v : undefined; } } });
globalThis.EdgeRuntime = globalThis.EdgeRuntime ?? { waitUntil: (p) => globalThis.Base44.waitUntil(p) };
// Static egress reads workerEnv from the active request store. Install it
// before telemetry so telemetry remains the outermost fetch wrapper.
installStaticEgressFetch();


let _b44Init = null;
export default {
  async fetch(request, env, ctx) {
    const _b44Env = (request.headers.get('base44-functions-version') ?? '') === 'prod' ? 'prod' : 'preview';
    return _b44Run({ env: _b44Env, secrets: env, workerEnv: env, waitUntil: (p) => ctx.waitUntil(p) }, async () => {
      if (!_b44Init) _b44Init = import("./main.ts").catch(e => { _b44Init = null; throw e; });
      const _b44Mod = await _b44Init;
      // Deno.serve capture wins (legacy contract, zero behavior change);
      // a default-exported handler is the new-contract fallback.
      const handler = getRegisteredHandler() ?? (typeof _b44Mod?.default === 'function' ? _b44Mod.default : null);
      if (!handler) {
        return new Response(
          "The function must export default a request handler or call Deno.serve()",
          { status: 503 },
        );
      }
      // Deno's handler signature is (request, info). Cloudflare doesn't expose a
      // connection address the same way; pass a best-effort placeholder. Real
      // client IP is available via the "cf-connecting-ip" request header.
      const info = {
        remoteAddr: { transport: "tcp", hostname: "0.0.0.0", port: 0 },
      };
      return handler(request, info);
    });
  },
};
"
`;

exports[`binding-mode entries > are pinned (telemetry=true) > per-app 1`] = `
"// Auto-generated by the base44 bundler. Do not edit.

import { currentWorkerRuntimeContext as _b44Context, runWithWorkerEnvironment as _b44Run } from "base44:internal/runtime-context";
import { installStaticEgressFetch, resolveHandler } from "./__base44_deno_shim.mjs";
import "./__base44_fn_0.mjs";

const _b44Orig = console.log;
const _b44S = x => { if (x instanceof Error) return x.stack || x.message; try { return typeof x === 'string' ? x : (JSON.stringify(x) ?? String(x)); } catch (e) { return String(x); } };
const _b44Fmt = (a) => {
  if (typeof a[0] !== 'string' || !a[0].includes('%')) return a.map(_b44S).join(' ');
  let i = 1;
  const s = a[0].replace(/%([sdifoOc])/g, (_, t) => {
    if (i >= a.length) return '%' + t;
    const v = a[i++];
    if (t === 'd' || t === 'i') { try { return String(Math.trunc(+v)); } catch(_) { return _b44S(v); } }
    if (t === 'f') { try { return String(+v); } catch(_) { return _b44S(v); } }
    if (t === 'c') return '';
    return _b44S(v);
  });
  const tail = a.slice(i).map(_b44S).join(' ');
  return tail ? s + ' ' + tail : s;
};
const _b44Ascii = (s) => s.replace(/[\\u007f-\\uffff]/g, (c) => '\\\\u' + c.charCodeAt(0).toString(16).padStart(4, '0'));
const _b44Capture = (c, lvl, msg) => {
  if (!c.invocationLogs) return;
  const cost = _b44Ascii(JSON.stringify(msg)).length + 30;
  if (c.invocationLogs.length >= 40 || c.invocationLogsBytes + cost > 6144) { c.invocationLogsDropped += 1; return; }
  c.invocationLogsBytes += cost;
  c.invocationLogs.push({ level: lvl, message: msg });
};
const _b44Wrap = (lvl, a) => { const _c = _b44Context() ?? {}; const _m = _b44Fmt(a); _b44Capture(_c, lvl, _m); _b44Orig({ _b44_env: _c.env ?? 'preview', ...(_c.fn ? { _b44_function: _c.fn } : {}), level: lvl, message: _m }); };
console.log = (...a) => _b44Wrap('info', a);
console.info = (...a) => _b44Wrap('info', a);
console.warn = (...a) => _b44Wrap('warn', a);
console.error = (...a) => _b44Wrap('error', a);
console.debug = (...a) => _b44Wrap('debug', a);
const _b44ReservedSecrets = new Set(['BASE44_ACTOR_PRIVATE_KEY', 'BASE44_ACTOR_PUBLIC_KEY', 'BASE44_ACTOR_SCRIPT_ID', 'BASE44_PRIVATE_DATA_SOURCES']);
globalThis.Base44 = Object.assign(globalThis.Base44 ?? {}, { waitUntil: (p) => { const _c = _b44Context(); if (_c?.waitUntil) { _c.waitUntil(p); } else { Promise.resolve(p).catch(() => {}); } }, secrets: { get: (n) => { const _k = String(n); if (_b44ReservedSecrets.has(_k)) return undefined; const _v = _b44Context()?.secrets?.[_k]; return typeof _v === 'string' ? _v : undefined; } } });
globalThis.EdgeRuntime = globalThis.EdgeRuntime ?? { waitUntil: (p) => globalThis.Base44.waitUntil(p) };
const _b44CaptureStore = (request) => request.headers.get("X-B44-Capture-Logs") === '1' ? { invocationLogs: [], invocationLogsBytes: 0, invocationLogsDropped: 0 } : {};
const _b44AttachInvocationLogs = (res) => {
  const c = _b44Context();
  if (!c || !c.invocationLogs) return res;
  if (!(res instanceof Response) || res.status === 101 || res.webSocket) return res;
  let existingBytes = 25;
  res.headers.forEach((v, k) => { existingBytes += k.length + v.length + 4; });
  let payload = _b44Ascii(JSON.stringify({ lines: c.invocationLogs, dropped: c.invocationLogsDropped }));
  if (existingBytes + payload.length > 7168) payload = JSON.stringify({ lines: [], dropped: c.invocationLogs.length + c.invocationLogsDropped });
  if (existingBytes + payload.length > 7168) return res;
  let wrapped;
  try { wrapped = new Response(res.body, res); } catch (e) { return res; }
  try { wrapped.headers.set("X-B44-Invocation-Logs", payload); } catch (e) {}
  return wrapped;
};
const _b44CrashResponse = (e) => {
  const c = _b44Context();
  if (!c || !c.invocationLogs) return null;
  const m = String(e instanceof Error ? e.message : e).toLowerCase();
  if (m.includes('cpu time limit') || m.includes('too many subrequests')) return null;
  return _b44AttachInvocationLogs(new Response(JSON.stringify({ error: 'user-exception', detail: 'user worker threw an exception' }), { status: 500, headers: { 'Content-Type': 'application/json' } }));
};
// Static egress reads workerEnv from the active request store. Install it
// before telemetry so telemetry remains the outermost fetch wrapper.
installStaticEgressFetch();
const _b44Tele = (c, event, fields) => {
  if (!(c.logBudget > 0)) return;
  c.logBudget -= 1;
  try { console.log(JSON.stringify({ b44_telemetry: 'post_response_work', event, request_id: c.reqId, ...fields })); } catch (e) {}
};
const _b44Target = (input) => { try { const u = typeof input === 'string' ? new URL(input) : (input instanceof URL ? input : new URL(input.url)); return u.origin; } catch (e) { return 'unknown'; } };
const _b44OrigFetch = globalThis.fetch.bind(globalThis);
globalThis.fetch = (input, init) => {
  const c = _b44Context();
  if (!c || c.respondedAt === undefined) return _b44OrigFetch(input, init);
  const t = _b44Target(input);
  if (c.respondedAt !== null) _b44Tele(c, 'fetch_started_post_response', { target: t, ms_after_response: Date.now() - c.respondedAt });
  const tracked = c.inflight.has(t) || c.inflight.size < 10;
  if (tracked) c.inflight.set(t, (c.inflight.get(t) ?? 0) + 1);
  c.inflightTotal += 1;
  const done = () => { c.inflightTotal -= 1; if (tracked) { const n = c.inflight.get(t); if (n !== undefined) { if (n <= 1) c.inflight.delete(t); else c.inflight.set(t, n - 1); } } };
  const failed = () => { if (c.respondedAt === null) c.hadRejection = true; done(); };
  const settled = (res) => { if (c.respondedAt === null && res && res.ok === false) c.hadNonOk = true; done(); };
  try { const p = _b44OrigFetch(input, init); p.then(settled, failed); if (c.waitUntil) { try { c.waitUntil(p.then(() => {}, () => {})); } catch (e) {} } return p; } catch (e) { failed(); throw e; }
};
const _b44AttachTelemetry = (res) => {
  const c = _b44Context();
  if (!c || c.respondedAt === undefined) return res;
  c.respondedAt = Date.now();
  if (c.inflightTotal <= 0 || res.status === 101 || res.webSocket) return res;
  const pending = { request_id: c.reqId, inflight: c.inflightTotal, targets: [...c.inflight.keys()], rejected_pre_response: c.hadRejection, non_ok_pre_response: c.hadNonOk };
  _b44Tele(c, 'inflight_at_response', pending);
  let wrapped;
  try { wrapped = new Response(res.body, res); } catch (e) { return res; }
  try { wrapped.headers.set('X-B44-Post-Response-Telemetry', JSON.stringify({ pending })); } catch (e) {}
  return wrapped;
};

export default {
  async fetch(request, env, ctx) {
    const _b44Env = (request.headers.get('base44-functions-version') ?? '') === 'prod' ? 'prod' : 'preview';
    const functionName = request.headers.get("Base44-Function-Name");
    return _b44Run({ env: _b44Env, fn: functionName ?? '', secrets: env, workerEnv: env, waitUntil: (p) => ctx.waitUntil(p), ..._b44CaptureStore(request), reqId: crypto.randomUUID(), respondedAt: null, inflight: new Map(), inflightTotal: 0, hadRejection: false, hadNonOk: false, logBudget: 5 }, async () => {
      // Each early return below logs through the patch first: per-function log
      // queries on per-app scripts keep only stamped lines, so a bare return
      // would leave the failing invocation with no trace in its own logs.
      const pendingHandler = functionName ? resolveHandler(functionName) : undefined;
      if (pendingHandler === undefined) {
        const message = \`No function registered for "\${functionName ?? ""}"\`;
        console.error(message);
        return _b44AttachInvocationLogs(new Response(message, { status: 404 }));
      }
      let handler;
      try {
        handler = await pendingHandler;
      } catch (e) {
        console.error(\`Function "\${functionName}" failed to initialize:\`, e);
        return _b44AttachInvocationLogs(new Response(
          \`Function "\${functionName}" failed to initialize: \${e instanceof Error ? e.message : String(e)}\`,
          { status: 500 },
        ));
      }
      if (handler === null) {
        const message = \`Function "\${functionName}" must export default a request handler or call Deno.serve()\`;
        console.error(message);
        return _b44AttachInvocationLogs(new Response(message, { status: 503 }));
      }
      // Real client IP is in the "cf-connecting-ip" header, not this placeholder.
      const info = {
        remoteAddr: { transport: "tcp", hostname: "0.0.0.0", port: 0 },
      };
      // Cloudflare reports uncaught exceptions as its own log events, outside
      // the console patch and therefore without function attribution. Log the
      // crash through the patch (stamped with _b44_function) before
      // rethrowing; per-function log queries on per-app scripts keep only
      // stamped lines (see log_query.event_matches_function). Known gap:
      // exceptions thrown while a response body streams happen after this
      // frame returns and cannot be stamped — those crash events are
      // dropped from per-function views, and lines logged after the response
      // starts streaming are past the invocation-logs header too.
      try {
        return _b44AttachInvocationLogs(_b44AttachTelemetry(await handler(request, info)));
      } catch (e) {
        console.error(e);
        const crash = _b44CrashResponse(e);
        if (crash) return crash;
        throw e;
      }
    });
  },
};
"
`;

exports[`binding-mode entries > are pinned (telemetry=true) > single function 1`] = `
"// Auto-generated by the base44 bundler. Do not edit.

import { currentWorkerRuntimeContext as _b44Context, runWithWorkerEnvironment as _b44Run } from "base44:internal/runtime-context";
import { getRegisteredHandler, installStaticEgressFetch } from "./__base44_deno_shim.mjs";

const _b44Orig = console.log;
const _b44S = x => { if (x instanceof Error) return x.stack || x.message; try { return typeof x === 'string' ? x : (JSON.stringify(x) ?? String(x)); } catch (e) { return String(x); } };
const _b44Fmt = (a) => {
  if (typeof a[0] !== 'string' || !a[0].includes('%')) return a.map(_b44S).join(' ');
  let i = 1;
  const s = a[0].replace(/%([sdifoOc])/g, (_, t) => {
    if (i >= a.length) return '%' + t;
    const v = a[i++];
    if (t === 'd' || t === 'i') { try { return String(Math.trunc(+v)); } catch(_) { return _b44S(v); } }
    if (t === 'f') { try { return String(+v); } catch(_) { return _b44S(v); } }
    if (t === 'c') return '';
    return _b44S(v);
  });
  const tail = a.slice(i).map(_b44S).join(' ');
  return tail ? s + ' ' + tail : s;
};
const _b44Ascii = (s) => s.replace(/[\\u007f-\\uffff]/g, (c) => '\\\\u' + c.charCodeAt(0).toString(16).padStart(4, '0'));
const _b44Capture = (c, lvl, msg) => {
  if (!c.invocationLogs) return;
  const cost = _b44Ascii(JSON.stringify(msg)).length + 30;
  if (c.invocationLogs.length >= 40 || c.invocationLogsBytes + cost > 6144) { c.invocationLogsDropped += 1; return; }
  c.invocationLogsBytes += cost;
  c.invocationLogs.push({ level: lvl, message: msg });
};
const _b44Wrap = (lvl, a) => { const _c = _b44Context() ?? {}; const _m = _b44Fmt(a); _b44Capture(_c, lvl, _m); _b44Orig({ _b44_env: _c.env ?? 'preview', ...(_c.fn ? { _b44_function: _c.fn } : {}), level: lvl, message: _m }); };
console.log = (...a) => _b44Wrap('info', a);
console.info = (...a) => _b44Wrap('info', a);
console.warn = (...a) => _b44Wrap('warn', a);
console.error = (...a) => _b44Wrap('error', a);
console.debug = (...a) => _b44Wrap('debug', a);
const _b44ReservedSecrets = new Set(['BASE44_ACTOR_PRIVATE_KEY', 'BASE44_ACTOR_PUBLIC_KEY', 'BASE44_ACTOR_SCRIPT_ID', 'BASE44_PRIVATE_DATA_SOURCES']);
globalThis.Base44 = Object.assign(globalThis.Base44 ?? {}, { waitUntil: (p) => { const _c = _b44Context(); if (_c?.waitUntil) { _c.waitUntil(p); } else { Promise.resolve(p).catch(() => {}); } }, secrets: { get: (n) => { const _k = String(n); if (_b44ReservedSecrets.has(_k)) return undefined; const _v = _b44Context()?.secrets?.[_k]; return typeof _v === 'string' ? _v : undefined; } } });
globalThis.EdgeRuntime = globalThis.EdgeRuntime ?? { waitUntil: (p) => globalThis.Base44.waitUntil(p) };
// Static egress reads workerEnv from the active request store. Install it
// before telemetry so telemetry remains the outermost fetch wrapper.
installStaticEgressFetch();
const _b44Tele = (c, event, fields) => {
  if (!(c.logBudget > 0)) return;
  c.logBudget -= 1;
  try { console.log(JSON.stringify({ b44_telemetry: 'post_response_work', event, request_id: c.reqId, ...fields })); } catch (e) {}
};
const _b44Target = (input) => { try { const u = typeof input === 'string' ? new URL(input) : (input instanceof URL ? input : new URL(input.url)); return u.origin; } catch (e) { return 'unknown'; } };
const _b44OrigFetch = globalThis.fetch.bind(globalThis);
globalThis.fetch = (input, init) => {
  const c = _b44Context();
  if (!c || c.respondedAt === undefined) return _b44OrigFetch(input, init);
  const t = _b44Target(input);
  if (c.respondedAt !== null) _b44Tele(c, 'fetch_started_post_response', { target: t, ms_after_response: Date.now() - c.respondedAt });
  const tracked = c.inflight.has(t) || c.inflight.size < 10;
  if (tracked) c.inflight.set(t, (c.inflight.get(t) ?? 0) + 1);
  c.inflightTotal += 1;
  const done = () => { c.inflightTotal -= 1; if (tracked) { const n = c.inflight.get(t); if (n !== undefined) { if (n <= 1) c.inflight.delete(t); else c.inflight.set(t, n - 1); } } };
  const failed = () => { if (c.respondedAt === null) c.hadRejection = true; done(); };
  const settled = (res) => { if (c.respondedAt === null && res && res.ok === false) c.hadNonOk = true; done(); };
  try { const p = _b44OrigFetch(input, init); p.then(settled, failed); if (c.waitUntil) { try { c.waitUntil(p.then(() => {}, () => {})); } catch (e) {} } return p; } catch (e) { failed(); throw e; }
};
const _b44AttachTelemetry = (res) => {
  const c = _b44Context();
  if (!c || c.respondedAt === undefined) return res;
  c.respondedAt = Date.now();
  if (c.inflightTotal <= 0 || res.status === 101 || res.webSocket) return res;
  const pending = { request_id: c.reqId, inflight: c.inflightTotal, targets: [...c.inflight.keys()], rejected_pre_response: c.hadRejection, non_ok_pre_response: c.hadNonOk };
  _b44Tele(c, 'inflight_at_response', pending);
  let wrapped;
  try { wrapped = new Response(res.body, res); } catch (e) { return res; }
  try { wrapped.headers.set('X-B44-Post-Response-Telemetry', JSON.stringify({ pending })); } catch (e) {}
  return wrapped;
};

let _b44Init = null;
export default {
  async fetch(request, env, ctx) {
    const _b44Env = (request.headers.get('base44-functions-version') ?? '') === 'prod' ? 'prod' : 'preview';
    return _b44Run({ env: _b44Env, secrets: env, workerEnv: env, waitUntil: (p) => ctx.waitUntil(p), reqId: crypto.randomUUID(), respondedAt: null, inflight: new Map(), inflightTotal: 0, hadRejection: false, hadNonOk: false, logBudget: 5 }, async () => {
      if (!_b44Init) _b44Init = import("./main.ts").catch(e => { _b44Init = null; throw e; });
      const _b44Mod = await _b44Init;
      // Deno.serve capture wins (legacy contract, zero behavior change);
      // a default-exported handler is the new-contract fallback.
      const handler = getRegisteredHandler() ?? (typeof _b44Mod?.default === 'function' ? _b44Mod.default : null);
      if (!handler) {
        return new Response(
          "The function must export default a request handler or call Deno.serve()",
          { status: 503 },
        );
      }
      // Deno's handler signature is (request, info). Cloudflare doesn't expose a
      // connection address the same way; pass a best-effort placeholder. Real
      // client IP is available via the "cf-connecting-ip" request header.
      const info = {
        remoteAddr: { transport: "tcp", hostname: "0.0.0.0", port: 0 },
      };
      return _b44AttachTelemetry(await handler(request, info));
    });
  },
};
"
`;
